// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowsheetResultCell correctly applies the theme context className 1`] = `
<td
  className="flowsheet-result-cell padding-compact orion-fusion-theme"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <ClinicalResult
        eventId="111"
        hideAccessoryDisplays={true}
        isTruncated={true}
        key="ClinicalResult-111"
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResults"
    >
      <div
        className="additional-end-display no-accessory-icons"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell paddingStyle should render when given compact 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <ClinicalResult
        eventId="111"
        hideAccessoryDisplays={true}
        isTruncated={true}
        key="ClinicalResult-111"
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResults"
    >
      <div
        className="additional-end-display no-accessory-icons"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell paddingStyle should render when given none 1`] = `
<td
  className="flowsheet-result-cell"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <ClinicalResult
        eventId="111"
        hideAccessoryDisplays={true}
        isTruncated={true}
        key="ClinicalResult-111"
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResults"
    >
      <div
        className="additional-end-display no-accessory-icons"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell paddingStyle should render when given standard 1`] = `
<td
  className="flowsheet-result-cell padding-standard"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <ClinicalResult
        eventId="111"
        hideAccessoryDisplays={true}
        isTruncated={true}
        key="ClinicalResult-111"
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResults"
    >
      <div
        className="additional-end-display no-accessory-icons"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should pass hideUnit down 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <ClinicalResult
        eventId="111"
        hideAccessoryDisplays={true}
        hideUnit={true}
        isTruncated={true}
        key="ClinicalResult-111"
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResults"
    >
      <div
        className="additional-end-display no-accessory-icons"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render a NoData if hasResultNoData is true 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="primary-display"
    key="ClinicalResultDisplay-NoData"
  >
    <InjectIntl(KnownNoData) />
  </div>
</td>
`;

exports[`FlowsheetResultCell should render a ResultError if hasResultError is true 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="primary-display error"
    key="ClinicalResultDisplay-Error"
  >
    <InjectIntl(ResultError) />
  </div>
</td>
`;

exports[`FlowsheetResultCell should render a entered-in-error status standard result 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <InjectIntl(EnteredInError) />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResults"
    >
      <div
        className="additional-end-display no-accessory-icons"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render an error when given no result data 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="primary-display error"
    key="ClinicalResultDisplay-Error"
  >
    <InjectIntl(ResultError) />
  </div>
</td>
`;

exports[`FlowsheetResultCell should render an error with bad data 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="primary-display error"
    key="ClinicalResultDisplay-Error"
  >
    <InjectIntl(ResultError) />
  </div>
</td>
`;

exports[`FlowsheetResultCell should render blood pressure correctly with an interpretation and unverified result 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <InjectIntl(ClinicalResultBloodPressure)
        diastolic={
          Object {
            "eventId": "111.2",
            "interpretation": "critical",
            "isUnverified": true,
            "result": Object {
              "unit": "mmHg",
              "value": "80",
            },
          }
        }
        hideAccessoryDisplays={true}
        isTruncated={true}
        key="ClinicalResultBloodPressure-111"
        systolic={
          Object {
            "eventId": "111.1",
            "interpretation": "critical",
            "isUnverified": true,
            "result": Object {
              "unit": "mmHg",
              "value": "180",
            },
          }
        }
      />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResultsAndIcons"
    >
      <div
        className="additional-end-display"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
      <div
        className="end-accessory-icons"
        key="EndAccessoryIcons-111"
      >
        <div
          className="end-accessory-stack"
        >
          <IconDiamond
            a11yLabel="Terra.clinicalResult.resultUnverified"
            className="icon-unverified"
            focusable="true"
            role="img"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        </div>
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render both entered-in-error status bloodpressure result 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <InjectIntl(EnteredInError) />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResults"
    >
      <div
        className="additional-end-display no-accessory-icons"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render correctly when a multiple results cell contains icons 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display interpretation"
      key="ClinicalResultDisplay-111"
    >
      <ClinicalResult
        eventId="111"
        hasComment={true}
        hideAccessoryDisplays={true}
        hideUnit={true}
        interpretation="critical"
        isTruncated={true}
        key="ClinicalResult-111"
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResultsAndIcons"
    >
      <div
        className="additional-end-display"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
      <div
        className="end-accessory-icons"
        key="EndAccessoryIcons-111"
      >
        <div
          className="end-accessory-stack"
        >
          <IconComment
            a11yLabel="Terra.clinicalResult.resultComment"
            className="icon-comment"
            data-name="Layer 1"
            focusable="true"
            isBidi={true}
            role="img"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        </div>
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render correctly with all normal results 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <ClinicalResult
        eventId="111"
        hideAccessoryDisplays={true}
        hideUnit={true}
        interpretation="normal"
        isTruncated={true}
        key="ClinicalResult-111"
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResults"
    >
      <div
        className="additional-end-display no-accessory-icons"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render correctly with an interpretation and unverified result 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <ClinicalResult
        eventId="111"
        hideAccessoryDisplays={true}
        hideUnit={true}
        interpretation="critical"
        isTruncated={true}
        isUnverified={true}
        key="ClinicalResult-111"
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResultsAndIcons"
    >
      <div
        className="additional-end-display"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
      <div
        className="end-accessory-icons"
        key="EndAccessoryIcons-111"
      >
        <div
          className="end-accessory-stack"
        >
          <IconDiamond
            a11yLabel="Terra.clinicalResult.resultUnverified"
            className="icon-unverified"
            focusable="true"
            role="img"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        </div>
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render correctly with at least 1 critical or out of range result 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display interpretation"
      key="ClinicalResultDisplay-111"
    >
      <ClinicalResult
        eventId="111"
        hideAccessoryDisplays={true}
        hideUnit={true}
        interpretation="critical"
        isTruncated={true}
        key="ClinicalResult-111"
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResults"
    >
      <div
        className="additional-end-display no-accessory-icons interpretation-critical"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleResults"
        />
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render systolic entered-in-error status bloodpressure result 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <InjectIntl(EnteredInError) />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResults"
    >
      <div
        className="additional-end-display no-accessory-icons"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render when given blood pressure diastolic result data with no id 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111.2"
    >
      <InjectIntl(ClinicalResultBloodPressure)
        diastolic={
          Object {
            "eventId": "111.2",
            "result": Object {
              "unit": "mmHg",
              "value": "80",
            },
          }
        }
        hideAccessoryDisplays={true}
        isTruncated={true}
        key="ClinicalResultBloodPressure-111.2"
      />
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render when given blood pressure systolic result data with no id 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111.1"
    >
      <InjectIntl(ClinicalResultBloodPressure)
        hideAccessoryDisplays={true}
        isTruncated={true}
        key="ClinicalResultBloodPressure-111.1"
        systolic={
          Object {
            "eventId": "111.1",
            "result": Object {
              "unit": "mmHg",
              "value": "180",
            },
          }
        }
      />
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render when given result data 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <ClinicalResult
        eventId="111"
        hideAccessoryDisplays={true}
        isTruncated={true}
        key="ClinicalResult-111"
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
    <div
      className="end-display"
      key="EndDisplay-AdditionalResults"
    >
      <div
        className="additional-end-display no-accessory-icons"
        key="AdditionalResultsDisplay-111"
      >
        <div
          aria-hidden="true"
          className="additional-results-stack"
        >
          <span
            className="additional-results-value"
          >
            2
          </span>
          <span
            className="additional-results-value"
          >
            2
          </span>
        </div>
        <VisuallyHiddenText
          text="Terra.clinicalResult.multipleNormalResults"
        />
      </div>
    </div>
  </div>
</td>
`;

exports[`FlowsheetResultCell should render when given result data with no event id 1`] = `
<td
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="combined-display"
  >
    <div
      className="primary-display"
      key="ClinicalResultDisplay-111"
    >
      <ClinicalResult
        hideAccessoryDisplays={true}
        id="111"
        isTruncated={true}
        key="ClinicalResult-111"
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
  </div>
</td>
`;
